--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
 
 .main-container {
   overflow: hidden;
+  /* z-index: -5; */
 }
 
 .main-container,
@@ -40,7 +41,7 @@ button {
   left: 50%;
   background: #fff5ed;
   transform: translate(-50%, 0);
-  z-index: 1;
+  z-index: auto;
 }
 .nav {
   display: flex;
@@ -192,7 +193,7 @@ button {
   white-space: nowrap;
   z-index: 16;
 }
-.image {
+/* .image {
   position: absolute;
   width: 1440px;
   height: 600px;
@@ -201,7 +202,7 @@ button {
   background: url(./images/img.png)
     no-repeat center;
   background-size: cover;
-  z-index: 3;
+  z-index:2;
 }
 .group {
   position: absolute;
@@ -209,10 +210,10 @@ button {
   height: 24.75%;
   top: 3.51%;
   left: 0.63%;
-  background: url(./assets/images/d04d03b2-083f-4db7-9069-fc58a4cbebc5.png)
+  background: url(images/Vector-1.png)
     no-repeat center;
   background-size: 100% 100%;
-  z-index: 2;
+  z-index:1;
 }
 .heading {
   display: flex;
@@ -230,9 +231,52 @@ button {
   line-height: 72px;
   text-align: left;
   text-overflow: ellipsis;
-  z-index: 5;
+  z-index: 3;
+  overflow: hidden;
+} */
+
+.image {
+  position: absolute;
+  width: 1440px;
+  height: 600px;
+  top: 71px;
+  left: 0;
+  background: url(./images/img.png) no-repeat center;
+  background-size: cover;
+  z-index: 1; /* Image above vector */
+}
+
+.group {
+  position: absolute;
+  width: 98.82%;
+  height: 24.75%;
+  top: 3.51%;
+  left: 0.63%;
+  background: url(images/Vector-1.png) no-repeat center ;
+  background-size: 100% 100%;
+  z-index: 0.5; /* Vector below the image */
+}
+
+.heading {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  width: 1128px;
+  height: 218px;
+  top: 296px;
+  left: 80px;
+  color: #fff5ed;
+  font-family: Montserrat, var(--default-font-family);
+  font-size: 60px;
+  font-weight: 900;
+  line-height: 72px;
+  text-align: left;
+  text-overflow: ellipsis;
+  z-index:2; /* Text above both image and vector */
   overflow: hidden;
 }
+
 .frame {
   display: flex;
   flex-direction: column;
@@ -558,6 +602,7 @@ button {
   flex-wrap: nowrap;
   flex-shrink: 0;
   gap: 28px;
+  transition: all 0.3s ease;
   position: relative;
   min-width: 0;
   z-index: 44;
@@ -567,6 +612,7 @@ button {
   position: relative;
   width: 528.5px;
   height: 373px;
+  transition: all 0.3s ease;
   z-index: 45;
 }
 .component-17 {
@@ -590,7 +636,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/1ceff837-13ff-4753-a3ba-7bfd8b5a4a6e.png)
+  background: url(images/Component\ 1.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 50;
@@ -601,7 +647,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/13a55fdf-38fa-41dc-a754-faeea71558ff.png)
+  background: url(images/Component\ 2.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 48;
@@ -613,7 +659,7 @@ button {
   height: 373px;
   top: 0;
   left: 0;
-  background: url(./assets/images/b2b40fca72c2c5ab69ad07752e442c7389c862ee.png)
+  background: url(images/imagee.png)
     no-repeat center;
   background-size: cover;
   z-index: 46;
@@ -622,6 +668,7 @@ button {
   flex-shrink: 0;
   position: relative;
   width: 528.5px;
+  transition: all 0.3s ease;
   height: 373px;
   z-index: 51;
 }
@@ -646,7 +693,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/77945a52-e20c-4362-b0ba-d661690aed54.png)
+  background: url(images/vector.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 56;
@@ -657,7 +704,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/004d3258-2d8a-456f-9443-e9b99c6662ee.png)
+  background: url(images/Component\ 2.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 54;
@@ -669,7 +716,7 @@ button {
   height: 373px;
   top: 0;
   left: 0;
-  background: url(./assets/images/7473de78b2814e1820ec1a50a42ed5abfc931ace.png)
+  background: url(images/ImageItem.png)
     no-repeat center;
   background-size: cover;
   z-index: 52;
@@ -679,6 +726,7 @@ button {
   position: relative;
   width: 528.5px;
   height: 373px;
+  transition: all 0.3s ease;
   z-index: 57;
 }
 .component-1f {
@@ -702,7 +750,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/c5d6ebcc-c20b-4e2a-b881-b693bfc05163.png)
+  background: url(images/vector.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 62;
@@ -713,7 +761,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/32207b46-b0f2-4f0e-a261-5100e33347e4.png)
+  background: url(images/Component\ 2.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 60;
@@ -725,7 +773,7 @@ button {
   height: 373px;
   top: 0;
   left: 0;
-  background: url(./assets/images/3a41e2122676ef98e8526f2840ea3151833c5137.png)
+  background: url(images/image-1.png)
     no-repeat center;
   background-size: cover;
   z-index: 58;
@@ -734,6 +782,7 @@ button {
   flex-shrink: 0;
   position: relative;
   width: 528.5px;
+  transition: all 0.3s ease;
   height: 373px;
   z-index: 63;
 }
@@ -758,7 +807,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/3f6f3683-9679-495c-a314-8cac6f112435.png)
+  background: url(images/Component\ 1.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 68;
@@ -769,7 +818,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/de624c66-ab54-45e7-a620-3ccd9b376ac8.png)
+  background: url(images/Component\ 2.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 66;
@@ -781,7 +830,7 @@ button {
   height: 373px;
   top: 0;
   left: 0;
-  background: url(./assets/images/539337ce99507ad54f4387e1bb40abb466b60656.png)
+  background: url(images/image-2.png)
     no-repeat center;
   background-size: cover;
   z-index: 64;
@@ -872,7 +921,7 @@ button {
   height: 395.624px;
   top: 0;
   left: 0;
-  background: url(./assets/images/910d820bb2176a8c70ff9d4521b1c747fbc160cb.png)
+  background: url(images/Image\ 6.png)
     no-repeat center;
   background-size: cover;
   z-index: 90;
@@ -883,7 +932,7 @@ button {
   height: 395.624px;
   top: 0;
   left: 425.154px;
-  background: url(./assets/images/fdbbfb13bc59fe26bb1d76f4898be7c6c3549a1c.png)
+  background: url(images/image.png)
     no-repeat center;
   background-size: cover;
   z-index: 80;
@@ -894,7 +943,7 @@ button {
   height: 395.624px;
   top: 0;
   left: 851.277px;
-  background: url(./assets/images/91f300ff435e9824ab3d227ef89ec759c1b9e455.png)
+  background: url(images/Image\ 8.png)
     no-repeat center;
   background-size: cover;
   z-index: 74;
@@ -920,7 +969,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/c8e5bb99-9f18-4863-aab5-71de9ed8235f.png)
+  background: url(images/Component\ 1.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 88;
@@ -931,7 +980,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/f9334be7-c874-4eca-bce7-8f54575ccfb3.png)
+  background: url(images/Component\ 2.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 86;
@@ -958,7 +1007,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/d406309e-b6ed-4d9e-8fdc-b066fe71db32.png)
+  background: url(images/vector.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 94;
@@ -969,7 +1018,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/172b39e4-94ac-4796-b8ae-5b6e6921af75.png)
+  background: url(images/Component\ 2.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 92;
@@ -996,7 +1045,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/7c83ef78-f342-48fc-8ac9-269ddf742756.png)
+  background: url(images/vector.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 84;
@@ -1007,7 +1056,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/bd83eef8-c14c-45cd-8e65-f15131f6e9d6.png)
+   background: url(images/Component\ 2.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 82;
@@ -1034,7 +1083,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/55a115f1-d9a6-4469-9916-fb023048a292.png)
+  background: url(images/vector.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 78;
@@ -1045,7 +1094,7 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(./assets/images/84d68307-8508-495d-ae6b-38b88e97049e.png)
+  background: url(images/Component\ 2.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 76;
@@ -1129,7 +1178,7 @@ button {
   height: 262.271px;
   top: 0;
   left: 0;
-  background: url(./assets/images/dea1e1cf93c12d7538f64d06f983d9f2a90f1cb3.png)
+  background: url(./images/Image\ 4.png)
     no-repeat center;
   background-size: cover;
   z-index: 100;
@@ -1140,7 +1189,7 @@ button {
   height: 262.271px;
   top: 0;
   left: 708.09px;
-  background: url(./assets/images/a184e95e212d81bcf879cb581ff496f2c601e8ef.png)
+  background: url(./images/ttt.png)
     no-repeat center;
   background-size: cover;
   z-index: 98;
@@ -1151,7 +1200,7 @@ button {
   height: 262.271px;
   top: 0;
   left: 1087.038px;
-  background: url(./assets/images/268f1cb9c65a84ef575a8487ef7b5e868e50f060.png)
+  background: url(./images/Image\ 7.png)
     no-repeat center;
   background-size: cover;
   z-index: 97;
@@ -1171,7 +1220,7 @@ button {
   position: relative;
   width: 535.94px;
   height: 323.616px;
-  background: url(./assets/images/58645e92ede4211e7ce5fc7e24e76e4c92350f20.png)
+  background: url(./images/eee.png)
     no-repeat center;
   background-size: cover;
   z-index: 99;
@@ -1181,7 +1230,7 @@ button {
   position: relative;
   width: 374.617px;
   height: 323.616px;
-  background: url(./assets/images/6daf948bc07069e29335ee0dadc6d532e7fc7b66.png)
+  background: url(./images/dogg.png)
     no-repeat center;
   background-size: cover;
   z-index: 101;
@@ -1191,7 +1240,7 @@ button {
   position: relative;
   width: 507.789px;
   height: 323.616px;
-  background: url(./assets/images/07056a1e20aa79cc9b75d98eb3feab1ec879ca9f.png)
+  background: url(./images/image\ 2.png)
     no-repeat center;
   background-size: cover;
   z-index: 102;
@@ -1213,7 +1262,7 @@ button {
   position: relative;
   width: 497px;
   height: 256px;
-  background: url(./assets/images/e2d300bdef245e13f4f1010fbbaa5deb0644da16.png)
+  background: url(./images/qq.png)
     no-repeat center;
   background-size: cover;
   z-index: 104;
@@ -1412,6 +1461,7 @@ button {
   background: #ffffff;
   border: 1px solid #898688;
   z-index: 114;
+  display: inline-block;
   border-radius: 10px;
 }
 .group-5a {
@@ -1440,43 +1490,59 @@ button {
   z-index: 117;
 }
 .text-5d {
-  display: block;
+  display: inline-block;
   position: relative;
   height: 28px;
   margin: 0 0 0 0;
+  /* margin-left: 50px; */
   color: #090a0b;
   font-family: Montserrat, var(--default-font-family);
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
+  margin: 5px 10px 10px 50px;
   text-align: left;
   text-overflow: ellipsis;
   white-space: nowrap;
   z-index: 120;
   overflow: hidden;
 }
+.ellipse-60, .ellipse-61, .ellipse-62 {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  border: 2px solid #090a0b;
+  appearance: none;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.ellipse-60:checked, .ellipse-61:checked, .ellipse-62:checked {
+  background-color: #583e16;
+}
+
 .text-5e {
-  display: block;
+  display: inline-block;
   position: relative;
   height: 28px;
-  margin: 18px 0 0 0;
   color: #090a0b;
   font-family: Montserrat, var(--default-font-family);
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
   text-align: left;
+  margin: 5px 10px 10px 50px;
   text-overflow: ellipsis;
   white-space: nowrap;
   z-index: 119;
   overflow: hidden;
 }
 .other {
-  display: block;
+  display:inline-block;
   position: relative;
   height: 24px;
-  margin: 18px 0 0 0;
   color: #090a0b;
+  margin: 5px 10px 10px 50px;
   font-family: Montserrat, var(--default-font-family);
   font-size: 20px;
   font-weight: 700;
@@ -1496,32 +1562,28 @@ button {
   z-index: 121;
 }
 .ellipse-60 {
-  position: relative;
+  position: absolute;
   width: 28px;
   height: 26px;
-  margin: 0 0 0 0;
-  background: url(./assets/images/45e79818-73f7-411b-8ea8-1d5660670299.png)
-    no-repeat center;
+  margin: 5px 10px 10px 10px;
+  margin-right: 50px;
   background-size: cover;
   z-index: 122;
 }
 .ellipse-61 {
-  position: relative;
+  position: absolute;
+  margin-right: 50px;
   width: 28px;
   height: 26px;
-  margin: 18px 0 0 0;
-  background: url(./assets/images/952793f0-e964-489c-8c9b-d2de824907b5.png)
-    no-repeat center;
+  margin: 5px 10px 10px 10px;
   background-size: cover;
   z-index: 123;
 }
 .ellipse-62 {
-  position: relative;
+  position: absolute;
   width: 28px;
   height: 26px;
-  margin: 18px 0 0 0;
-  background: url(./assets/images/18cf0916-f8fa-4b65-8dc8-5fff3953b5d9.png)
-    no-repeat center;
+  margin: 5px 10px 10px 10px;
   background-size: cover;
   z-index: 124;
 }
@@ -1531,8 +1593,6 @@ button {
   height: 12px;
   top: 35px;
   left: 29px;
-  background: url(./assets/images/3e1e3313-0c13-4e54-9a8a-315d52bc27bf.png)
-    no-repeat center;
   background-size: cover;
   z-index: 125;
   border-radius: 50%;
@@ -1704,14 +1764,29 @@ button {
   flex-basis: auto;
   position: relative;
   height: 31px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  padding: 4px 44px 4px 44px;
+  border-radius: 47.111px;
+  box-shadow: 0 7.369px 11.054px 0 rgba(0, 0, 0, 0.25);
+  gap: 17px;
   color: #fff5ed;
+  border: none;
+  background-color: transparent;
   font-family: Montserrat, var(--default-font-family);
-  font-size: 25.276288986206055px;
+  font-size: 26px;
   font-weight: 400;
+  width: 215px;
+  height: 53px;
   line-height: 30.812px;
   text-align: left;
   white-space: nowrap;
-  z-index: 141;
+  z-index: 139;
+}
+.frame-69 :hover{
+  background: #402d10;
 }
 .frame-6a {
   display: flex;
@@ -1853,7 +1928,7 @@ button {
   width: 37.037px;
   height: 37.037px;
   margin: 1.481px 0 0 1.481px;
-  background: url(./assets/images/8e0c22d3-94cc-4657-80cb-1f864862f654.png)
+  background: url(./images/ri_account-circle-fill.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 154;
@@ -1916,7 +1991,7 @@ button {
   width: 30.486px;
   height: 37.037px;
   margin: 1.481px 0 0 4.757px;
-  background: url(./assets/images/c01e9613-d1ce-4f32-8d12-6958ebcd9227.png)
+  background: url(./images/fluent_location-28-filled.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 160;
@@ -1979,7 +2054,7 @@ button {
   width: 37.037px;
   height: 29.63px;
   margin: 5.185px 0 0 1.481px;
-  background: url(./assets/images/de2b4905-69ed-453c-8c0e-b77182984ba2.png)
+  background: url(./images/mdi_gmail.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 166;
@@ -2215,19 +2290,34 @@ textarea {
   border-radius: 47.111px;
   box-shadow: 0 7.369px 11.054px 0 rgba(0, 0, 0, 0.25);
 }
+.frame-84 :hover{
+  background: #402d10;
+}
 .button {
   flex-shrink: 0;
   flex-basis: auto;
   position: relative;
   height: 31px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  padding: 4px 44px 4px 44px;
+  border-radius: 47.111px;
+  box-shadow: 0 7.369px 11.054px 0 rgba(0, 0, 0, 0.25);
+  gap: 17px;
   color: #fff5ed;
+  border: none;
+  background-color: transparent;
   font-family: Montserrat, var(--default-font-family);
-  font-size: 25.276288986206055px;
+  font-size: 26px;
   font-weight: 400;
+  width: 215px;
+  height: 53px;
   line-height: 30.812px;
   text-align: left;
   white-space: nowrap;
-  z-index: 169;
+  z-index: 139;
 }
 .frame-85 {
   display: flex;
@@ -2468,7 +2558,7 @@ textarea {
   width: 18.333px;
   height: 17.5px;
   margin: 1.75px 0 0 1.833px;
-  background: url(./assets/images/bf68cf40-4911-4a4a-8e48-1bbabf154641.png)
+  background: url(./images/Vector-3.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 202;
@@ -2486,7 +2576,7 @@ textarea {
   width: 18.333px;
   height: 16.625px;
   margin: 1.667px 0 0 1.833px;
-  background: url(./assets/images/2e215c59-4bbc-4915-8d09-bfbc55564267.png)
+  background: url(./images/Vector-2.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 206;
@@ -2504,7 +2594,7 @@ textarea {
   width: 17.188px;
   height: 15.625px;
   margin: 2.188px 0 0 2.406px;
-  background: url(./assets/images/69dab022-a5b2-4eca-9a9f-4ed1421ce9ba.png)
+  background: url(./images/Vector-5.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 200;
@@ -2522,14 +2612,14 @@ textarea {
   width: 18.333px;
   height: 15.75px;
   margin: 2.625px 0 0 1.833px;
-  background: url(./assets/images/158c4b83-e6f4-47a3-947c-4d1a14f446af.png)
+  background: url(./images/Vector-4.png)
     no-repeat center;
   background-size: 100% 100%;
   z-index: 204;
 }
 .frame-97 {
   display: flex;
-  align-items: center;
+  align-items:center;
   justify-content: center;
   flex-wrap: nowrap;
   flex-shrink: 0;
@@ -2566,7 +2656,7 @@ textarea {
   height: 1149px;
   top: 4329px;
   left: -32px;
-  background: url(./assets/images/27515024aa02b5b26e6ebd02c347f3b723b035d1.png)
+  background: url(./images/27515024aa02b5b26e6ebd02c347f3b723b035d1.png)
     no-repeat center;
   background-size: cover;
 }
@@ -2636,3 +2726,21 @@ textarea {
   white-space: nowrap;
   z-index: 21;
 }
+@media screen and (max-width:440px) {
+  div{
+   display: none;
+      
+  }
+  .resp{
+      display: inline;
+      margin-top: 5em;
+      color: #090a0b;
+      font-family: Montserrat, var(--default-font-family);
+      font-size: 16px;
+      padding: 5px;
+      background-image:url(./images/dog.png) no-repeat center;
+      background-size: cover; 
+    
+  }
+      
+  }
