--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body{
   background-color:#fff5ed ;
 }
@@ -98,6 +99,7 @@ button {
   align-items: center;
   justify-content: flex-end;
   flex-wrap: nowrap;
+  text-decoration: none;
   flex-shrink: 0;
   gap: 30px;
   position: relative;
@@ -110,6 +112,7 @@ button {
   flex-basis: auto;
   position: relative;
   height: 16px;
+  text-decoration: none;
   color: #090a0b;
   font-family: Montserrat, var(--default-font-family);
   font-size: 16px;
@@ -124,6 +127,7 @@ button {
   flex-basis: auto;
   position: relative;
   height: 16px;
+  text-decoration: none;
   color: #090a0b;
   font-family: Montserrat, var(--default-font-family);
   font-size: 16px;
@@ -138,6 +142,7 @@ button {
   flex-basis: auto;
   position: relative;
   height: 16px;
+  text-decoration: none;
   color: #090a0b;
   font-family: Montserrat, var(--default-font-family);
   font-size: 16px;
@@ -152,6 +157,7 @@ button {
   flex-basis: auto;
   position: relative;
   height: 16px;
+  text-decoration: none;
   color: #090a0b;
   font-family: Montserrat, var(--default-font-family);
   font-size: 16px;
@@ -168,6 +174,7 @@ button {
   flex-wrap: nowrap;
   flex-shrink: 0;
   position: relative;
+  text-decoration: none;
   width: 105px;
   height: 40px;
   padding: 0 20px 0 20px;
@@ -188,6 +195,7 @@ button {
   font-family: Montserrat, var(--default-font-family);
   font-size: 16px;
   font-weight: 700;
+  text-decoration: none;
   line-height: 16px;
   text-align: center;
   white-space: nowrap;
@@ -520,6 +528,7 @@ button {
   justify-content: center;
   flex-shrink: 0;
   flex-basis: auto;
+  text-decoration: none;
   position: relative;
   width: 137px;
   height: 34px;
@@ -555,6 +564,7 @@ button {
   flex-shrink: 0;
   flex-basis: auto;
   position: relative;
+  text-decoration: none;
   width: 124px;
   height: 34px;
   color: #d9d9d9;
@@ -1104,6 +1114,7 @@ button {
   position: relative;
   width: 1152px;
   height: 49px;
+  text-decoration: none;
   margin: 27.376px 0 0 10px;
   z-index: 95;
 }
@@ -1122,6 +1133,7 @@ button {
   font-weight: 700;
   line-height: 28.8px;
   text-align: left;
+  text-decoration: none;
   z-index: 95;
 }
 .text-43 {
